<resources>
    <string name="app_name">Pictures</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="remove_from_favourites">Favourites</string>
    <string name="slideshow">Slideshow</string>
    <string name="slideshow_interval">Slideshow interval</string>
    <string name="random">Random slideshow</string>
    <string name="favourites_only">Only favourites</string>
    <string name="bookshelf">bookshelf</string>
</resources>
