<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_add_to_favorites"
        android:icon="@drawable/ic_add_to_favourites"
        android:title="@string/add_to_favourites"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_remove_from_favorites"
        android:icon="@drawable/ic_remove_from_favourites"
        android:title="@string/remove_from_favourites"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>
</menu>
