<?xml version="1.0" encoding="utf-8"?>
<LinearLayout tools:context="ru.sibsoft.mikhailv.pictures.ActivitySettings"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <android.support.v7.widget.SwitchCompat android:id="@+id/slideshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slideshow"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/slideshow_interval">

        <EditText android:id="@+id/slideshow_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.SwitchCompat android:id="@+id/random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:showText="false"
        android:text="@string/random"/>

    <android.support.v7.widget.SwitchCompat android:id="@+id/favourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favourites_only"/>
</LinearLayout>
